Initial work on pyraster class

--- a/pyspatialml/Examples/Example.ipynb
+++ b/pyspatialml/Examples/Example.ipynb
@@ -217,7 +217,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/rasterio/__init__.py:160: FutureWarning: GDAL-style transforms are deprecated and will not be supported in Rasterio 1.0.\n  transform = guard_transform(transform)\n"
+      "/anaconda3/lib/python3.6/site-packages/rasterio/__init__.py:160: FutureWarning: GDAL-style transforms are deprecated and will not be supported in Rasterio 1.0.\n",
+      "  transform = guard_transform(transform)\n"
      ]
     }
    ],
@@ -271,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
