Updated comments, changed predict and sampling methods to require rasterio datasetreader objects as inputs

--- a/pyspatialml/Examples/Example.ipynb
+++ b/pyspatialml/Examples/Example.ipynb
@@ -12,17 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from osgeo import gdal\n",
-    "from pyspatialml.sampling import extract\n",
-    "from pyspatialml import predict\n",
-    "import geopandas as gpd\n",
-    "import rasterio\n",
-    "import rasterio.plot as rplot\n",
-    "from rasterio.sample import sample_gen\n",
+    "from pyspatialml import predict, extract\n",
+    "import geopandas\n",
+    "import rasterio.plot\n",
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
@@ -88,7 +85,7 @@
    "outputs": [],
    "source": [
     "# read vector data\n",
-    "training_gpd = gpd.read_file(training_points)"
+    "training_gpd = geopandas.read_file(training_points)"
    ]
   },
   {
@@ -139,15 +136,7 @@
    "outputs": [],
    "source": [
     "# extract using pyspatialml\n",
-    "X, y, xy = extract(raster=vrt_file, response_gdf=training_gpd, field='id')\n",
-    "\n",
-    "# otherwise extract using rasterio sample_gen\n",
-    "coordinates = training_gpd.bounds.iloc[:, 0:2].as_matrix()\n",
-    "with rasterio.open(vrt_file) as src:\n",
-    "    X = np.vstack([i for i in sample_gen(src, coordinates)])\n",
-    "X = np.ma.masked_equal(X, src.nodatavals)\n",
-    "y = training_gpd.id\n",
-    "y = np.ma.masked_array(y, mask=X.mask.any(axis=1), fill_value=-99999)\n"
+    "X, y, xy = extract(dataset=vrt_file, response=training_gpd, field='id')"
    ]
   },
   {
@@ -223,7 +212,7 @@
     }
    ],
    "source": [
-    "result = predict(estimator=clf, raster=vrt_file, file_path='classification.tif')"
+    "result = predict(estimator=clf, dataset=vrt_file, file_path='classification.tif')"
    ]
   },
   {
