--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -6,10 +6,21 @@
    "source": [
     "# Pyspatialml\n",
     "\n",
+    "Machine learning classification and regresssion modelling for spatial raster data.\n",
+    "\n",
+    "## Description\n",
     "```Pyspatialml``` is a Python module for applying scikit-learn machine learning models to raster datasets. Pyspatialml includes functions and classes for working with multiple raster datasets and performing a typical machine learning workflow consisting of extracting training data and applying the predict or predict_proba methods of scikit-learn estimators to a stack of raster datasets.\n",
     "\n",
+    "## Background\n",
     "\n",
-    "### Functions and Classes \n",
+    "A supervised machine-learning workflow as applied to spatial raster data involves several steps:\n",
+    "1. Extracting training data.\n",
+    "2. Developing a machine learning classifier or regressor model. Pyspatialml uses scikit-learn for this purpose.\n",
+    "3. Performing the prediction on the raster data.\n",
+    "\n",
+    "Training data consists of two components - a response feature and a set of predictors. With spatial data, the response feature is often represented by a locations when some property/state/concentration is already established. This data can be represented by point locations (e.g. arsenic concentrations soil samples), pixel locations where the pixel value represents the target of interest, or polygon features (e.g. labelled with landcover type). The predictors are represented by raster data, which contain variables that that in part may explaining the spatial distribution of the response variable (e.g., raster data representing soil types, soil properties, climatic data etc.).\n",
+    "\n",
+    "## Functions and Classes \n",
     "\n",
     "#### The RasterStack Class\n",
     "\n",
@@ -366,7 +377,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we might want to perform the prediction on the raster data. The estimator, raster and file_path fields are required. Predict_type can be either 'raw' to output a classification or regression result, or 'prob' to output class probabilities as a multi-band raster (a band for each class probability). In the latter case, indexes can also be supplied if you only want to output the probabilities for a particular class, or list of classes, by supplying the indices of those classes:"
+    "### Raster Prediction\n",
+    "\n",
+    "Prediction on the RasterStack is performed using the ```predict``` method. The ```estimator``` is the only required argument. If the ```file_path``` argument is not specified then the result is automatically written to a temporary file. The predict method returns an rasterio.io.DatasetReader object which is open.\n",
+    "\n",
+    "Other arguments consist of ```predict_type``` can be either 'raw' to output a classification or regression result, or 'prob' to output class probabilities as a multi-band raster (a band for each class probability). In the latter case, ```indexes``` can also be supplied if you only want to output the probabilities for a particular class, or list of classes, by supplying the indices of those classes:"
    ]
   },
   {
@@ -454,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -471,14 +486,14 @@
     }
    ],
    "source": [
-    "strata = rasterio.open(os.path.join(basedir, 'strata.tif'))\n",
-    "df_strata = stack.sample(size=5, strata=strata, random_state=1)\n",
-    "df_strata = df_strata.dropna()\n",
+    "with rasterio.open(os.path.join(basedir, 'strata.tif')) as strata:\n",
+    "    df_strata = stack.sample(size=5, strata=strata, random_state=1)\n",
+    "    df_strata = df_strata.dropna()\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.imshow(strata.read(1, masked=True), extent=rasterio.plot.plotting_extent(strata), cmap='tab10')\n",
-    "df_strata.plot(ax=ax, markersize=20, color='white')\n",
-    "plt.show()"
+    "    fig, ax = plt.subplots()\n",
+    "    ax.imshow(strata.read(1, masked=True), extent=rasterio.plot.plotting_extent(strata), cmap='tab10')\n",
+    "    df_strata.plot(ax=ax, markersize=20, color='white')\n",
+    "    plt.show()"
    ]
   },
   {
