--- a/examples/Example 1 - Multitarget Regression of Soil Properties.ipynb
+++ b/examples/Example 1 - Multitarget Regression of Soil Properties.ipynb
@@ -179,7 +179,7 @@
    "source": [
     "## Feature Engineering\n",
     "\n",
-    "We want the prediction results to be depend on the spatial locations of the training data. So to include spatial information, coordinate grids can be generated and added to the Raster object:"
+    "We want the prediction results to be dependent on the spatial locations of the training data. So to include spatial information, coordinate grids can be generated and added to the Raster object:"
    ]
   },
   {
