updated usage document

--- a/docs/usage.qmd
+++ b/docs/usage.qmd
@@ -27,6 +27,6 @@ Methods contained within RasterLayer objects are specifically designed to be app
 
 ## Principles of working with Rasters
 
-Methods that are applied to Raster objects are generally designed to be applied to the entire stack of raster datasets. For example, the `crop` method will crop all raster datasets in the stack to a common extent, and the `mask` method will apply a mask to all raster datasets in the stack. These methods always return a new Raster object, and do not modify the original Raster object by default.
+Methods that are applied to Raster objects are generally designed to be applied to the entire stack of raster datasets. For example, the `crop` method will crop all raster datasets in the stack to a common extent, and the `mask` method will apply a mask to all raster datasets in the stack. These methods always return a new Raster object, and do not modify the original Raster object by default. Subsetting of individual bands uses the same principles as the `pandas` library, where the `loc` method is used to subset bands based on their names, and the `iloc` method is used to subset bands based on their index. Also similarly to `pandas`, subsetting a single band will return the object itself, in this case, a RasterLayer object, while subsetting multiple bands will return a new Raster object.
 
-In contrast, methods that apply to individual RasterLayers are mostly related to extracting or summarizing metadata from the individual bands. For other methods that users may want to apply to individual bands, it is recommended to work with `rasterio` directly.
+Methods that apply to individual RasterLayers are mostly related to extracting or summarizing metadata from the individual bands. For other methods that users may want to apply to individual bands, it is recommended to work with `rasterio` directly.
